remove garbage code, fix scrollbar and message in delete modal, update styles

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatView/chat-view.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatView/chat-view.css
@@ -16,6 +16,9 @@
 .chat-message-modal .chat-message:hover {
     @apply bg-secondary;
 }
+.chat-message-modal .chat-message:hover .author-badge {
+    @apply bg-secondary;
+}
 
 .chat-message-modal .message-attachment-file a {
     @apply cursor-default pointer-events-none;
